--- a/luqman_files/about.html
+++ b/luqman_files/about.html
@@ -7,44 +7,54 @@
     <title>DLJ&Co Gallery - About Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
 	<!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-	<!-- <!-- <link rel="stylesheet" href="assets/css/index_style.css"> Jenny's CSS -->
-	<link rel="stylesheet" href="assets/css/stylesheet.css"> <!-- This one is for THIS PAGE, not index_style.css -->
-	<link rel="stylesheet" href="assets/css/style_p.css"> <!--Luqman's CSS-->
-	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+<!-- 	<link rel="stylesheet" href="assets/css/index_style.css"> Jenny's CSS -->
+<!-- 	<link rel="stylesheet" href="assets/css/stylesheet.css"> &lt;!&ndash; This one is for THIS PAGE, not index_style.css &ndash;&gt;&ndash;&gt;-->
+ 	<link rel="stylesheet" href="assets/css/style_p.css"> <!--&lt;!&ndash;Luqman's CSS&ndash;&gt;&ndash;&gt;-->
+	<link rel="stylesheet" href="assets/css/JennysStylesheet.css"> <!-- navbar stylesheet based on stylesheet.css-->
+	<link rel="stylesheet" href="assets/css/waterfall.css">
 	<!-- Fonts -->
+<!--	<link rel="preconnect" href="https://fonts.gstatic.com">-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Raleway:wght@200&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: #323232">
+
+<body>
 	<!-- Logo -->
-    <div class="container">
-        <div class="">
-            <div class="company-logo" style="padding-top:45px;padding-bottom:40px;">
-                <img src="assets/images/logo_white_gold2.png" alt="Company logo">
-            </div>
-        </div>
-	
+	<div class="container">
+		<div class="top">
+			<div class="company-logo-about">
+				<a href="home.html"><img src="assets/images/logo.png" alt="Company logo"></a>
+			</div>
+		</div>
+<!--    <div class="top">-->
+<!--        <div class="">-->
+<!--            <div class="company-logo" style="padding-top:45px;padding-bottom:40px;">-->
+<!--                <img src="assets/images/logo.png" alt="Company logo">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--	-->
 	
 	<!-- About -->	
 	
 	<div class="container" style="">
 	  <div class="row imgpad" style="padding-bottom:-10px;" >
-		<div><img class="img-fluid" src="assets/images/outdoor/outdoorintoxiquette.jpg"></div>
-	    <div>
-		<h2> </h2>
-			<p class="weddingText" style="color:white; font-size:20px; padding-left:30px; padding-right:30px; padding-top:100px"> Here at DJ & Co., our passion is creativity - creativity makes us happy. We truly believe in the 
-			transformative power of photography and design and their ability to simplify communication, elevate experiences, 
-			and to engage and inspire people everywhere. We're excited to start a visual dialogue, learn about you, and
-			make something beautiful together. 
-			</p>
-	    </div>
+		<div><img class="img-fluid" src="assets/images/outdoor/outdoorintoxiquette.jpg" style="padding-top: 100px;"></div>
+			<div class="row">
+				<div class="col-6"><p class="weddingText" style="color:dimgrey; text-align:right; font-size:25px; padding-left:30px; padding-right:30px; padding-top:50px"> Here at DJ & Co., our passion is creativity - creativity makes us happy. We truly believe in the
+				transformative power of photography and design and their ability to simplify communication, elevate experiences,
+				and to engage and inspire people everywhere. We're excited to start a visual dialogue, learn about you, and
+				make something beautiful together.
+				</p></div>
+				<div class="col-6"><img class="" src="assets/images/Chowsep_Unsplash.png" style="width:400px; height:auto; object-fit:cover; padding-top: 50px;"></div>
+			</div>
 	    <!-- <div class="col-3"><img class="img-fluid" src="assets/images/outdoor/outdoorngs2.jpg"></div> -->
 	  </div>
 
@@ -59,22 +69,67 @@
 	  
 	
 	
-	<div style="padding-bottom:100px"></div> <!--spacer-->
-		
+	<div style="padding-bottom:100px; border-bottom: 2px solid black;"></div> <!--spacer-->
+
 		<!-- Navbar -->
-			<div class="nav_bar" style="margin:auto">
-				<ul class="navbar">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="/services.html">SERVICES</a></li>
-					<li><a href="/gallery.html">GALLERY</a></li>
-					<!-- <button type="button" class="btn btn-outline-dark"><a href="login.html">Log in</a></button> -->
-					<!-- <a class="cart" href="/cart.html"><i class="fas fa-shopping-bag fa-2x"><span> 0</span></i></a> -->
+
+		<nav class="navbar navbar-expand-lg navbar-light rounded">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="" href="home.html">HOME </a>
+					</li>
+					<li class="nav-item">
+						<a class="" href="about.html">ABOUT</a>
+					</li>
+					<li class="nav-item">
+						<a class="" href="services.html">SERVICES</a>
+					</li>
+					<li>
+						<a class="nav-item btn dropdown-toggle " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+							GALLERY
+						</a>
+					</li>
+					<li><a class="nav-item" href="login.html">LOGIN</a></button> <!--Suggest use bootstrap modal for this func, but may also be done with onClick event go back page-->
+					</li>
+					<li><div clas="container"><a class="cart" href="/cart.html"><i class="fas fa-shopping-bag fa-2x"><span> 0</span></i></a></div>
+					</li>
+
 				</ul>
 			</div>
+		</nav>
+
+		<div class="collapse" id="collapseExample">
+			<div class="container dropdownbtn dropdownbtn-txt"  >
+				<div class="row" >
+					<div class="col-sm-auto">
+						<a class="dropdownbtn-txt" href="product_architecture.html" >architecture</a>
+					</div>
+					<div class="col-sm-auto" >
+						<a class="dropdownbtn-txt" href="product_drone.html">drone</a>
+					</div>
+					<div class="col-sm-auto">
+						<a class="dropdownbtn-txt" href="product_studio.html">studio</a>
+					</div>
+					<div class="col-sm-auto">
+						<a class="dropdownbtn-txt" href="product_product.html">product</a>
+					</div>
+					<div class="col-sm-auto">
+						<a class="dropdownbtn-txt" href="product_outdoors.html">outdoors</a>
+					</div>
+					<div class="col-sm-auto">
+						<a class="dropdownbtn-txt" href="product_wedding.html">wedding</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- Footer -->
-			<div class="footerabout">
+			<div class="footer">
 				<div class="container-footer">
 					<div class="row">
 						<a href="mailto:dlj@gmail.com"><img class="logo" src="assets/images/logo.png">
@@ -100,10 +155,19 @@
 			</div>
 			
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="../js/main_js.js "></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+		<!-- Bootstrap core JavaScript
+        ================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+		<script src="../js/main_js.js "></script>
+		<!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
 </body>
 
