--- a/about.html
+++ b/about.html
@@ -4,38 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Us</title>
+    <title>DLJ & Co.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-    <!--Luqman's CSS-->
-    <!-- <link rel="stylesheet" href="assets/css/JennysStylesheet.css">
-    <link rel="stylesheet" href="assets/css/style_p.css"> -->
-    <!-- ^navbar stylesheet based on stylesheet.css^-->
-    <!-- <link rel="stylesheet" href="assets/css/waterfall.css"> -->
-
+    <!-- Animate on scroll css -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-
 
 </head>
 
 <body>
-    <!-- Logo -->
     <div class="container">
         <div class="top">
             <div class="company-logo">
                 <img src="/assets/images/logo.png" alt="Company logo">
             </div>
         </div>
-
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark rounded">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,8 +45,9 @@
                     </li>
                     <li>
                         <a class="nav-item btn dropdown-toggle " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        PORTFOLIO
+                            PORTFOLIO
                     </a>
+
                     </li>
                     <li><a class="nav-item" href="login.html">LOGIN</a></button>
                         <!--Suggest use bootstrap modal for this func, but may also be done with onClick event go back page-->
@@ -94,57 +85,77 @@
             </div>
         </div>
 
-
-
         <!-- About -->
         <div class="container">
             <h1>About Us</h1>
-            <div class="row imgpad" style="padding-bottom:-10px;">
-                <div><img class="img-fluid" src="assets/images/outdoor/outdoorintoxiquette.jpg"></div>
-                <div class="row">
-                    <div class="col-7">
-                        <p class="wedding_Text">Here at DJ & Co., our passion is creativity - creativity makes us happy. We truly believe in the transformative power of photography and design and their ability to simplify communication, elevate experiences, and to engage and
-                            inspire people everywhere. We're excited to start a visual dialogue, learn about you, and make something beautiful together.
-                        </p>
-                    </div>
-                    <div class="col-5"><img class="camera" src="assets/images/Chowsep_Unsplash.png"></div>
-                </div>
-                <!-- <div class="col-3"><img class="img-fluid" src="assets/images/outdoor/outdoorngs2.jpg"></div> -->
-            </div>
-            <br>>
-            <div class="row">
-                <div class="col-9"><img class="img-fluid " src="assets/images/outdoor/outdoormbsshoppers.jpg" style="height: 650px"></div>
 
+            <p class="about-text">Here at DLJ & Co., we care. We care about capturing your stories and translating them into meaningful photographs. We understand the importance of capturing those cherished moments, the beautiful moments that deserve to be treated with love
+                and preserved for a lifetime.
+            </p>
+            <p class="about-text2">As the premier concept photography studio in Singapore, our style has been simple yet – creating classic photos that will tug at your heartstrings.
+            </p>
+            <div class="row">
+                <div class="col-9">
+                    <img class="img-fluid " src="assets/images/outdoor/outdoormbsshoppers.jpg" style="height: 650px">
+                </div>
                 <div class="col-3"><img class="img-fluid imgpad" src="assets/images/studio/lady_corporate_chic.jpg" style="">
                     <img class="img-fluid imgpad" src="assets/images/architecture/enclosed_garden.jfif" style="" ;>
                     <img class="img-fluid imgpad" src="assets/images/outdoor/outdoormerlion.jpg" style="" ;>
                 </div>
             </div>
 
-
-
-            <!-- <div style="padding-bottom:100px; border-bottom: 2px solid black;"></div> -->
-            <div style="padding-bottom:100px;"></div>
-            <!--spacer-->
-
-            <!-- Footer -->
-            <div class="footer">
-                <div class="container-footer">
-                    <div class="row">
-                        <a href="mailto:dlj@gmail.com"><img class="logo" src="/assets/images/logo.png">
-                        </a>
-                        <hr>
+            <br>
+            <div class="row">
+                <div class="col-lg-">
+                </div>
+            </div>
+            <strong><h2 class="about">About The Team</h2></strong>
+            <br>
+            <div class="flex-container about">
+                <div class="card-about">
+                    <img src="assets/images/darrek.jpg" class="team card-img-top" alt="Co-Founder Darrek Lau">
+                    <div class="card-body">
+                        <h5 class="about card-title">Co-Founder</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 left">
-                            <p class="address">(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
-                            </p>
+                </div>
+                <!-- <div class="card-about">
+                    <img src="" class="team card-img-top" alt="Co-Founder Luqman Simon">
+                    <div class="card-body">
+                        <h5 class="about card-title">Co-Founder</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div> -->
+                <!-- <div class="card-about">
+                    <img src="assets/images/jenny.jpg" class="about card-img-top" alt="Co-Founder Jenny Lim>
+                    <div class=" card-body ">
+                        <h5 class="about card-title ">Co-Founder</h5>
+                        <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div> -->
+
+                <!-- Footer -->
+                <div class="footer ">
+                    <div class="container-footer ">
+                        <div class="row ">
+                            <a href="mailto:dlj@gmail.com "><img class="logo " src="/assets/images/logo.png ">
+                            </a>
+                            <hr>
                         </div>
-                        <div class="col-md-6 right">
-                            <h3 class="follow-us">Follow Us</h3>
-                            <a class="social-media-icon" href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
-                            <a class="social-media-icon" href="https://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
-                            <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
+                        <div class="row ">
+                            <div class="col-md-6 left ">
+                                <p class="address ">(+65)333400 <br> <a href="mailto:dlj@gmail.com ">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                                </p>
+                            </div>
+                            <div class="col-md-6 right ">
+                                <h3 class="follow-us ">Follow Us</h3>
+                                <a class="social-media-icon " href="https://www.facebook.com/ "><i class="fab fa-facebook fa-lg "></i></a>
+                                <a class="social-media-icon " href="https://www.twitter.com/ "><i class="fab fa-twitter fa-lg "></i></a>
+                                <a href="https://www.instagram.com/ "><i class="fab fa-instagram fa-lg "></i></a>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <h2>&#9400; Copyright 2020-2021 All rights reserved</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -153,18 +164,21 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
         ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="assets/js/main_js.js"></script>
-    <script src="assets/js/waterfall.js"></script>
-    <!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js " integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy " crossorigin="anonymous "></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
+        <script src="assets/js/main_js.js "></script>
+        <script src="assets/js/waterfall.js "></script>
+        <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+        <script>
+            AOS.init();
+        </script>
 
-</body>
+</html>
