--- a/gallery_studio.html
+++ b/gallery_studio.html
@@ -12,18 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-    <!--Luqman's CSS-->
-    <!-- <link rel="stylesheet" href="assets/css/JennysStylesheet.css">
-    <link rel="stylesheet" href="assets/css/style_p.css"> -->
-    <!-- ^navbar stylesheet based on stylesheet.css^-->
-    <!-- <link rel="stylesheet" href="assets/css/waterfall.css"> -->
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-
 
 </head>
 
@@ -189,7 +181,7 @@
 
         <div class="portfolio-description">
             <h1>Studio</h1>
-            <p class="lead text-muted">Whether it is to look your best for your headshots & corporate profiles, to a personalized graduation & family photoshoots, to maternity photography to celebrate new life. </p>
+            <p class="lead text-muted">Whether it is to look your best for your headshots & corporate profiles,<br> to a personalized graduation & family photoshoots,<br>to maternity photography to celebrate new life. </p>
         </div>
 
         <!-- Footer -->
